# gb-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain  rustfmt.toml
.github/workflows/: rust.yaml
gb-rs/: Cargo.toml
gb-rs/src/: main.rs
lib-gb-rs/: Cargo.toml
lib-gb-rs/src/: execution_events.rs  lib.rs
lib-gb-rs/src/components/: high_ram.rs  interrupt_controller.rs  mod.rs  serial.rs  timer.rs  wram.rs
lib-gb-rs/src/components/cartridge/: mbc1.rs  mod.rs  rom_only.rs
lib-gb-rs/src/cpu_execution/: instructions.rs  mod.rs  tests_instructions.rs  tests_interrupt.rs
lib-gb-rs/tests/: blargg_cpu_instrs.rs  blargg_instr_timing.rs  dmg_acid2.rs  mooneye_tests.rs
lib-gb-rs/tests/mooneye_macro/: mod.rs
lib-gb-rs/vendored_test_roms/: README.md
src/: cartridge.rs  cpu.rs  execution.rs  lib.rs  main.rs
src/components/: bus.rs  cartridge.rs  controller.rs  cpu.rs  high_ram.rs  interrupt_controller.rs  mod.rs  ppu.rs  serial.rs  sound.rs  timer.rs  work_ram.rs  wram.rs
src/components/cartridge/: mbc1.rs  mod.rs  rom_only.rs
src/core/: cpu.rs  high_ram.rs  interrupt_controller.rs  mod.rs  serial.rs  testsupport.rs  timer.rs  wram.rs
src/core/cartridge/: mbc1.rs  mod.rs  rom_only.rs
src/core/cpu/: instructions.rs  mod.rs  registers.rs
src/core/execution/: instructions.rs  mod.rs  tests_instructions.rs  tests_interrupt.rs
src/core/ppu/: buffer.rs  mod.rs
src/execution/: execute.rs  fetch_decode.rs  instructions.rs  mod.rs  mod_old.rs
tests/: blargg_cpu_instrs.rs  blargg_instr_timing.rs  dmg_acid2.rs  mooneye_tests.rs
tests/mooneye_macro/: mod.rs
(+2 files in other folders)
