[package]
name = "gb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
simplelog = "0.11.2"
strum = "0.23.0"
strum_macros = "0.23.1"

[dev-dependencies]
paste = "1.0.6"
