[package]
name = "gb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.11.2"
glium = "0.31.0"
log = "0.4.14"
lib-gb-rs = {path = "../lib-gb-rs" }
clap = { version = "3.1.10", features = ["derive"] }
